@@ -1,3 +1,11 @@
+Tue Apr  7 14:50:07 UTC 2009 Juergen Kahrs <jkahrs@users.sourceforge.net>
+
+	Sync with savannah gawk cvsps 246.
+	New lint warnings and test cases.
+
+	* Makefile.am (printfbad2): New test.
+	* printfbad2.awk, printfbad2.in, printfbad2.ok: New files.
+
 Tue Apr  7 12:07:33 UTC 2009 Juergen Kahrs <jkahrs@users.sourceforge.net>
 
         Sync with savannah gawk cvsps 234.
