@@ -1,3 +1,8 @@
+Fri Mar 27 10:57:49 2009  Arnold D. Robbins  <arnold@skeeve.com>
+
+	* Makefile.am (printfbad2): New test.
+	* printfbad2.awk, printfbad2.in, printfbad2.ok: New files.
+
 Tue Feb  3 22:08:27 2009  Arnold D. Robbins  <arnold@skeeve.com>
 
 	* Makefile.am (uparrfs): New test.
